header section added

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,10 @@
     background-color: #3746CB;
     text-transform: uppercase;
     color: white;
-    
+}
 
-
+.nike-social-icon a,i{
+    border: none;
+    color: lightblue;
+    padding: 3px;
 }
